k8s/stress-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-app
  labels:
    app: stress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stress-app
  template:
    metadata:
      labels:
        app: stress-app
    spec:
      containers:
      - name: stress-app
        image: bacdocker/aiops-stress-app2:breaked 
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1500m"
            memory: "1012Mi"
