k8s/stress-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-app-service
spec:
  type: NodePort
  selector:
    app: stress-app
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
    nodePort: 30007
